--- a/HTML/informes.html
+++ b/HTML/informes.html
@@ -11,12 +11,19 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
   </head>
   <body>
     <!-- Nav personalizado -->
-    <div class="container-sm">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+    <div class="container-fluid sticky-top" id="nav-grl-container">
+      <nav
+        class="navbar navbar-expand-lg navbar-light bg-light nav-underline"
+        id="nav-sub1-container"
+      >
+        <div class="container-fluid" id="nav-sub2-container">
           <button
             class="navbar-toggler"
             type="button"
@@ -29,37 +36,41 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="../inicio.html"
-                  >Inicio</a
+            <ul class="navbar-nav ms-lg-auto">
+              <li class="nav-item fs-5">
+                <a class="nav-link" aria-current="page" href="../inicio.html"
+                  ><i class="bi bi-house-fill"></i> Inicio</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../HTML/informes.html">Informes</a>
+              <li class="nav-item fs-5">
+                <a class="nav-link" href="../HTML/visita.html"
+                  ><i class="bi bi-airplane-fill"></i> Visita</a
+                >
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../HTML/visita.html">Visita</a>
+              <li class="nav-item fs-5">
+                <a class="nav-link active" href="../HTML/informes.html"
+                  ><i class="bi bi-info-square-fill"></i> Informes</a
+                >
               </li>
             </ul>
           </div>
         </div>
       </nav>
-      <!-- Fin nav -->
-    <div class="container-sm">
-      <h1 class="w-50 text-center mx-auto">
-        Informes
-      </h1>
-      <p>En esta página usted encontrará un formulario que puede llenar con sus
-        datos, para que lo podamos contactar y compartir más información de
-        algún lugar que le interese conocer de los mostrados en la página visita</p>
-        <hr>
     </div>
-    <div class="container">
-      <form class="row g-3">
+    <!-- Fin nav -->
+    <div class="container-fluid" id="intro-color">
+      <h1 class="w-50 text-center mx-auto pt-4" id="titulo-h1">Informes</h1>
+      <p id="parrafo-uno" class="w-75 text-center mx-auto px-3 pt-3 fs-5">
+        En esta página usted encontrará un formulario que puede llenar con sus
+        datos, para que lo podamos contactar y compartir más información de
+        algún lugar que le interese conocer de los mostrados en la página visita
+      </p>
+    </div>
+    <div
+      class="container-fluid d-flex justify-content-center"
+      id="container-content"
+    >
+      <form class="row g-3 fs-5" id="content-rows">
         <div class="col-md-6">
           <label for="nombre_informes" class="form-label">Nombre</label>
           <input
@@ -94,18 +105,26 @@
         </div>
         <div class="col-12">
           <label for="mensaje_informes" class="form-label">Mensaje</label>
-          <input
-            type="text"
-            class="form-control form-width"
+          <textarea
+            class="form-control"
             id="mensaje_informes"
             placeholder="Platicanos tus dudas"
-          />
+            rows="3"
+          ></textarea>
         </div>
-        <div class="col-12">
-          <button type="submit" class="btn btn-primary">Enviar</button>
+        <div class="col-12 text-center">
+          <button type="submit" class="btn btn-success fs-5">Enviar</button>
         </div>
       </form>
+      <br />
     </div>
+    <!-- Footer -->
+    <footer class="text-center">
+      <small class="text-black"
+        ><strong>&copy; 2024 Sergio Rolón Cisneros </strong></small
+      >
+    </footer>
+    <!-- Fin footer -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
