--- a/HTML/informes.html
+++ b/HTML/informes.html
@@ -112,7 +112,7 @@
             rows="3"
           ></textarea>
         </div>
-        <div class="col-12 text-center">
+        <div class="col-12 text-center pb-3">
           <button type="submit" class="btn btn-success fs-5">Enviar</button>
         </div>
       </form>
