--- a/inicio.html
+++ b/inicio.html
@@ -93,11 +93,18 @@
         <div
           class="img-container col-lg-6 d-flex align-items-center order-lg-2 py-4"
         >
-          <img
-            class="border rounded img-fluid d-block mx-auto"
-            src="https://www.google.com/maps/vt/data=OPOzKihejVKN1BdO2zHVNgpQEGsbs9FWGE27iswSWslhSLGSg5QbNfrGH1XqWGaFiOcwt4ze7AnCQvj1iaHLECjMdsh0b2cVyj8BPKwKgEKwy-G_y2PUOOA6sXTOreDfZQau8PAVhXfW9Wehzab68WJ6JgItk1bezer3wdEqFRXjRGbf4McpIwEQrW7mPO58oDJfotxvprLFbIk0FpiF1QqABrwG2wj7EFwWC8g8uksRcY-PBA820NmA1lwbzDUdoQuQw57WvVBdrsxHylSv"
-            alt="Mapa de Gdl"
-          />
+          <div class="ratio ratio-16x9">
+            <iframe
+              class="rounded d-block mx-auto"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d119452.6394355585!2d-103.41797171547066!3d20.673851095698666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428b18cb52fd39b%3A0xd63d9302bf865750!2sGuadalajara%2C%20Jalisco!5e0!3m2!1sen!2smx!4v1724549121858!5m2!1sen!2smx"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
         </div>
         <div
           class="col-lg-6 d-flex flex-column align-items-center justify-content-center"
@@ -115,9 +122,9 @@
       </div>
       <!-- 3ra fila -->
       <div class="row">
-        <div class="img-container col-lg-6 d-flex align-items-center">
+        <div class="img-container col-lg-6 d-flex align-items-center py-4">
           <img
-            class="border rounded img-fluid d-block mx-auto py-4"
+            class="border rounded img-fluid d-block mx-auto"
             src="https://tecolotito.elsiglodetorreon.com.mx/i/2020/03/1286894.jpeg"
             alt="La minerva gdl"
           />
