--- a/inicio.html
+++ b/inicio.html
@@ -20,7 +20,7 @@
     <!-- Nav personalizado -->
     <div class="container-fluid sticky-top" id="nav-grl-container">
       <nav
-        class="navbar navbar-expand-lg navbar-light bg-light nav-underline"
+        class="navbar navbar-expand-lg nav-underline"
         id="nav-sub1-container"
       >
         <div class="container-fluid" id="nav-sub2-container">
